# MLOpsCourse

./: .gitignore  .pre-commit-config.yaml  README.md  commands.py  create_example_request.py  example_request.json  main.py  pyproject.toml
.dvc/: config
.github/workflows/: run_pre_commit.yml
configs/: cb_config.yaml  rf_config.yaml
mlopscourse/: infer.py  train.py  utils.py
mlopscourse/configs/: cb_config.yaml  rf_config.yaml
mlopscourse/data/: .gitignore  prepare_dataset.py  test_split.csv.dvc  train_split.csv.dvc
mlopscourse/models/: base.py  catboost.py  models_zoo.py  random_forest.py
mlopscourse/triton/: Dockerfile  client.py  requirements.txt
mlopscourse/triton/assets/: .gitignore  catboost.p.dvc
mlopscourse/triton/model_repository/catboost/: config.pbtxt
mlopscourse/triton/model_repository/catboost/1/: model.py
