[tool.poetry]
name = "mlopscourse"
version = "0.2.0"
description = "A training repository to hone skills"
authors = ["Svyatoslav <pchelintsev.sv@phystech.edu>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/TopCoder2K/MLOpsCourse"

[tool.poetry.dependencies]
python = ">= 3.9, < 3.13"
numpy = "^1.26.0"
scikit-learn = "^1.3.1"
catboost = "^1.2.2"
fire = "^0.5.0"
hydra-core = "^1.3.2"
mlflow = "^2.8.1"
skl2onnx = "^1.16.0"
onnxruntime = "^1.16.3"
tritonclient = {extras = ["http"], version = "^2.41.0"}

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"
dvc = {extras = ["gdrive"], version = "^3.27.0"}

[tool.black]
line-length = 90
target-version = ["py39"]

[tool.isort]
src_paths = ["mlopscourse"]
profile = "black"
line_length = 90
lines_after_imports = 2

[tool.nbqa.config]
black = "pyproject.toml"
isort = "pyproject.toml"
flake8 = "setup.cfg"

[tool.nbqa.addopts]
flake8 = ["--extend-ignore=E402"]

[tool.nbqa.mutate]
black = 1
isort = 1

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
